--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,13 +10,14 @@
 
     <TextView
         android:id="@+id/welcome"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="153dp"
-        android:text="Helping you on your way"
-        android:textSize="20dp"/>
+        android:text="Helping you on your way to your dream home"
+        android:textSize="20dp"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/logo"
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/welcome"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="60dp"
         android:textSize="32dp"
         android:text="MortgageMe!" />
 
@@ -40,19 +41,19 @@
     <Button
         android:id="@+id/btnloan"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="53dp"
-        android:text="I'm buying a car"
+        android:layout_height="53dp"
         android:layout_below="@+id/question"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="53dp"
+        android:layout_marginStart="13dp"
+        android:layout_toStartOf="@+id/btnmortgage"
+        android:text="I'm a returning customer" />
 
     <Button
         android:id="@+id/btnmortgage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/btnloan"
-        android:layout_marginStart="24dp"
-        android:layout_toEndOf="@+id/btnloan"
-        android:text="I'm buying a home" />
+        android:layout_width="180dp"
+        android:layout_height="53dp"
+        android:layout_marginEnd="13dp"
+        android:text="I'm a new customer"
+        android:layout_alignTop="@+id/btnloan"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
